docs: add documentation swagger
